--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
-    "glob": "^7.2.0",
-    "mathjs": "^10.5.3"
+    "glob": "^7.2.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
