--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "request-promise-native": "^1.0.9"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/node": "^16.11.35",
+    "@types/request-promise-native": "^1.0.18",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
