--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
-    "request-promise-native": "^1.0.9"
+    "request-promise-native": "^1.0.9",
+    "yt-search": "^2.10.3"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
