--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
+    "fs": "^0.0.1-security",
     "glob": "^7.2.0",
+    "luxon": "^2.4.0",
     "request-promise-native": "^1.0.9",
     "yt-search": "^2.10.3"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^16.11.35",
     "@types/request-promise-native": "^1.0.18",
     "ts-node": "^10.4.0",
