--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@iamtraction/google-translate": "^1.1.2",
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
