--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@iamtraction/google-translate": "^1.1.2",
+    "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
