--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "glob": "^7.2.0",
     "luxon": "^2.4.0",
+    "ms": "^2.1.3",
     "pg": "^8.7.3",
     "request-promise-native": "^1.0.9",
     "yt-search": "^2.10.3"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/luxon": "^2.3.2",
+    "@types/ms": "^0.7.31",
     "@types/node": "^16.11.35",
     "@types/pg": "^8.6.5",
     "@types/request-promise-native": "^1.0.18",
