--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.9.0",
     "@iamtraction/google-translate": "^1.1.2",
     "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
+    "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "glob": "^7.2.0",
+    "i18n": "^0.15.0",
+    "i18next": "^21.8.7",
+    "i18next-fs-backend": "^1.1.4",
+    "lavaclient": "^4.0.8",
+    "lavalink": "^2.13.0",
     "luxon": "^2.4.0",
     "ms": "^2.1.3",
     "pg": "^8.7.3",
+    "postgres": "^3.2.4",
     "request-promise-native": "^1.0.9",
     "yt-search": "^2.10.3"
   },
@@ -33,6 +41,7 @@
     "@types/node": "^16.11.35",
     "@types/pg": "^8.6.5",
     "@types/request-promise-native": "^1.0.18",
+    "@types/yt-search": "^2.3.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
