--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,43 @@
 dist/
 node_modules/
-scripts/
+_scripts/
 .idea/
 package-lock.json
 .env
-Procfile
 
-# commands on dev
-src/slashCmds/action/
-plans.txt
-src/modules/giveaway/
-src/modules/music/
+# commands on _dev
+todo.txt
+src/modules/economy
+src/modules/giveaway
+src/modules/leveling
+src/modules/music
+
+src/modules/information/donate.ts
+src/modules/information/links.ts
+src/modules/information/patreon.ts
+src/modules/information/premium.ts
+src/modules/information/wiki.ts
+
+src/modules/moderation/mute.ts
 src/modules/moderation/slowmode.ts
-src/modules/moderation/unmute.ts
 src/modules/moderation/timeout.ts
+src/modules/moderation/unmute.ts
 src/modules/moderation/untimeout.ts
+
+src/modules/search/urban.ts
+
+src/modules/setup/disableCmd.ts
+src/modules/setup/enableCmd.ts
+src/modules/setup/setLanguage.ts
+
+src/modules/utility/random.ts
+
+src/slashCmds/economy
+src/slashCmds/giveaway
+src/slashCmds/leveling
+src/slashCmds/moderation
+src/slashCmds/music
+src/slashCmds/profile
+src/slashCmds/search
+src/slashCmds/setup
+src/slashCmds/utility
