--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "@discordjs/voice": "^0.9.0",
     "@iamtraction/google-translate": "^1.1.2",
     "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "dotenv": "^10.0.0",
+    "erela.js": "^2.3.3",
+    "erela.js-apple": "^1.2.6",
+    "erela.js-deezer": "^1.0.7",
+    "erela.js-facebook": "^1.0.4",
+    "express": "^4.18.1",
     "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "glob": "^7.2.0",
@@ -27,11 +32,12 @@
     "i18next-fs-backend": "^1.1.4",
     "lavaclient": "^4.0.8",
     "lavalink": "^2.13.0",
+    "lavasfy": "^2.3.0",
     "luxon": "^2.4.0",
     "ms": "^2.1.3",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
-    "request-promise-native": "^1.0.9",
+    "socket.io": "^4.5.1",
     "yt-search": "^2.10.3"
   },
   "devDependencies": {
@@ -40,8 +46,8 @@
     "@types/ms": "^0.7.31",
     "@types/node": "^16.11.35",
     "@types/pg": "^8.6.5",
-    "@types/request-promise-native": "^1.0.18",
     "@types/yt-search": "^2.3.2",
+    "prettier": "2.6.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
