--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ms": "^2.1.3",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
+    "relevant-urban": "^2.0.0",
     "socket.io": "^4.5.1",
     "yt-search": "^2.10.3"
   },
