updated/added dependencies
updated "discord.js" and added "interval-conversions"

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@discordjs/voice": "^0.9.0",
     "@iamtraction/google-translate": "^1.1.2",
     "axios": "^0.27.2",
-    "discord.js": "^13.8.0",
+    "discord.js": "^13.8.1",
     "dotenv": "^10.0.0",
     "erela.js": "^2.3.3",
     "erela.js-apple": "^1.2.6",
@@ -30,6 +30,7 @@
     "i18n": "^0.15.0",
     "i18next": "^21.8.7",
     "i18next-fs-backend": "^1.1.4",
+    "interval-conversions": "^1.4.0",
     "lavaclient": "^4.0.8",
     "lavalink": "^2.13.0",
     "lavasfy": "^2.3.0",
